# SolMeet

./: .replit  Anchor.toml  README.md  bot.py  idl.json  pyproject.toml  simple_bot.py  test_solana_balance.py  test_wallet_creation.py
events/: 29E7219D.json  42C4F7BE.json  4CA7E567.json  7749AD1D.json  777FCB19.json  7E250E9C.json  7E9C7C87.json  C08989ED.json  C3F98DED.json  E39ABCA0.json
handlers/: __init__.py  approval.py  event.py  faucet.py  start.py  wallet.py
join_requests/: 4CA7E567_requests.json  7749AD1D_requests.json  777FCB19_requests.json  7E9C7C87_requests.json
participants/: 29E7219D.json  42C4F7BE.json  4CA7E567.json  7749AD1D.json  777FCB19.json  7E250E9C.json  7E9C7C87.json  C08989ED.json  C3F98DED.json  E39ABCA0.json
utils/: __init__.py  here_wallet.py  here_wallet_connector.py  join_requests.py  keyboard.py  participants.py  qr.py  solana.py  wallet_creator.py
wallets/: 2T3vn7wkUKPzyNLXwuAFEyQAByqt4bfxPUoScEncunbH.json  3PPUEaBXsuqTFL4BTWwcCrpdGXhd7oL2eeah6TcxCQYd.json  4suR2Dbo92XF56oMzHvL546MpLovVYdmMP5oxE4UwPFp.json  5jTFHZzFYsto7chQtsvzFdMuJDxryJBopQ4JAdtLYiFm.json  6UyMjuPe7MpjZhBSfhTqSNgwKMtDLGEnGfiex2hX8fD1.json  7wck322NNphsYfKez7kyoYqKGLwqj68mtNaPGH9keXtU.json  8KN4kiihAV9YAMxU3EjRYobBukp1xv9LVRmm2Aw3MKRm.json  CABRAFXTwPaQLexG9sWHvys137nkJTZA9q3X6nY1bi9J.json  CrkzQfs3b3a89HLnBNRyunuBzMqKSrQT7ZquoPdScDTa.json  DkgBMcqFkTfw3VCVbbMP5tqb7KaNfzTJ7LRa6zgeXrVY.json  EW6LZ7HcVJo7pkJ8coyc35rRzXuWzAS42vieKEsK9mkj.json  Gk5inwWFWXDDPzaH9L8Nm5mBJnzak1xxKkqP5WMCUws4.json  HAjUcPq4V1Q3yGskv13L59ooYt9vvAC5GTVUwJqfrazS.json
(+2 files in other folders)
